--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
+alembic==1.8.1
+aniso8601==9.0.1
+attrs==22.1.0
+click==8.1.3
+exceptiongroup==1.0.4
 Flask==2.0.3
+Flask-HTTPAuth==4.2.0
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-flask-marshmallow==0.14.0
+greenlet==2.0.1
+importlib-metadata==5.1.0
+importlib-resources==5.10.1
+iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.1
+marshmallow==3.19.0
 marshmallow-sqlalchemy==0.24.2
-Flask-HTTPAuth==4.2.0
-Werkzeug~=2.0.0
-passlib
+packaging==22.0
+passlib==1.7.4
+pluggy==1.0.0
+pytest==7.2.0
+pytz==2022.6
+six==1.16.0
+SQLAlchemy==1.4.44
+tomli==2.0.1
+Werkzeug==2.0.3
+zipp==3.11.0
