--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==9.0.1
 apispec==6.0.2
 asttokens==2.2.1
 attrs==22.1.0
+Babel==2.11.0
 backcall==0.2.0
 click==8.1.3
 decorator==5.1.1
@@ -10,6 +11,7 @@ exceptiongroup==1.0.4
 executing==1.2.0
 Flask==2.0.3
 flask-apispec==0.11.4
+Flask-Babel==2.0.0
 Flask-HTTPAuth==4.2.0
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
